# 3DConstruction

./: .gitignore  README.md
Desktop/3Dconstruction/chapter2/examples/task2/: CMakeLists.txt  class2_test_bundle_adjustment.cc
Desktop/3Dconstruction/chapter2/features/: matching.h
Desktop/pcl/: second work.cpp
chapter2/examples/task2/: class2_test_bundle_adjustment.cc  class2_test_homography.cc  class2_test_p3p.cc  class2_test_triangle.cc
chapter2/features/: matching.h  sift.cc
chapter3/Task-2/: CMakeLists.txt  calss2_test_pose_from_fundamental.cc  class2_test_camera.cc  class2_test_fundamental_8_point.cc  class2_test_fundamental_ransac.cc
